--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,15 +1,156 @@
-
-
-
-/* #search-form {
+ 
+input[type=text] {
+    width: 400px;
+    padding: 12px 20px;  
+    box-sizing: border-box;
+    border: none;
+    border-radius: 4px;
     display: flex;
+    margin: auto;
+  
+} 
+
+.button {
+    width: 200px;
+    padding: 12px 20px;    
+    background-color: rgba(233, 44, 44, 0.856);   
+    box-sizing: border-box;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    margin: auto;
+    margin-top: -10px;
+}
+
+.home-page {   
+    background-image: url("/images/concertHeart.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: -10px;
+    /* background-color: black; */
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: space-around;
+    justify-items: center;
+}
+
+.box {
+    font-size: 1.2rem;
+    background-color: rgba(236, 204, 204, 0.281);
+    text-align: center;
+    border: none;
+    border-radius: 4px;    
+    box-shadow: 2px 2px 15px 0 rgba(44, 42, 42, 0.685);
+    margin: auto;
+    padding: 20px;
+    width: 650px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+}
+
+img {
+    margin-top: 0;
+    display: block;
+    max-width:300px;
+    max-height:300px;
+    width: auto;
+    height: auto;
+    border-top-left-radius:10px;
+    border-top-right-radius:10px;
+}
+
+.artist-box {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 300px;
+    height: 425px;
+    
+    border-radius: 10px;    
+    box-shadow: 2px 2px 15px 0 rgba(0, 0, 0, 0.904);
+
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(34, 33, 33);
+    color: white;
+    
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;    
+    text-align: center;   
+}
+
+.artist-order {
+    margin: auto;
+    width: 50px;    
+}
+
+.view-button {
+    width: 150px;
+    padding: 12px 20px;    
+    background-color: rgba(233, 44, 44, 0.856);   
+    box-sizing: border-box;
+    border: none;    
+    color: white;
+    margin: auto;
+    margin-top: -10px;
+    text-decoration: none ;
+    border-radius: 4px;    
+}
+
+a {
+    text-decoration: none ;
+    color: white;
+}
+
+.container {
+    background-image: url("/images/tile.jpg");
+    width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     align-content: center;
-    justify-content: center;
+    margin: -10px;
 }
-input[type=text] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-} */
+
+.track-box {
+    display: flex;    
+    flex-wrap: wrap;
+    width: 700px;
+    height: 50px;
+    justify-content: space-between;
+
+
+    border-radius: 10px;    
+    box-shadow: 2px 2px 15px 0 rgba(0, 0, 0, 0.822);
+
+    
+    align-items: center;
+    background-color: rgb(34, 33, 33);
+    color: white;
+    
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;    
+    text-align: center;  
+}
+
+.track-box p {
+    margin-left: 15px;
+}
+
+.track-box audio {
+    margin-right: 15px;
+}
+
+h2 {
+    font-size: larger;
+}
