--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,8 @@
 
-<form action="/artist-search" method="get">
-  <label for="artist">Artist</label>
+<div class="home-page">
+  <form class="box" action="/artist-search" method="get">
+  
   <input type="text" name="artist" id="artist" />
-  <button type="submit">Search for an Artist</button>
+  <button class="button" type="submit">Search for an Artist</button>
 </form>
+</div>
