--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -6,7 +6,7 @@
     
     <img src="{{this.images.0.url}}" alt="{{name}}" />
     <h2>{{this.name}}</h2>
-    <button class="view-button"><a href="/view-tracks/{{this.id}}">view Tracks</a></button>
+    <button class="view-button"><a href="/view-tracks/{{this.id}}">View tracks</a></button>
     </div>
     {{/each}}
 </div>
